Change Log
==========

v1.1: All functionality from progs.dat v1.06.

Changes were copied from the QW 2.30 GPL release wherever possible, otherwise
changes were written from scratch inspired by the 1.06 release.

* Updated ClientObituary in client.qc from qw2.30 GPL (qc v1.06).
* Updated PlayerPreThink in client.qc from qw2.30 GPL (qc v1.06).
* Removed commented out code in CheckRules client.qc (qc v1.06).
* Updated NextLevel in client.qc from qw2.30 GPL (qc v1.06).
* Deleted PrintClientScore and DumpScore in client.qc (qc v1.06).
* Updated PutClientInServer in client.qc (qc v1.06).
* Updated SelectSpawnPoint in client.qc from scratch (qc v1.06).
* Updated changelevel_touch in client.qc from qw2.30 GPL (qc v1.06).
* Updated SetNewParms in client.qc from qw2.30 GPL (qc v1.06).
* Updated SetChangeParms in client.qc from qw2.30 GPL (qc v1.06).
* Updated DropBackpack in items.qc from qw2.30 GPL (qc v1.06).
* Updated BackpackTouch in items.qc from qw2.30 GPL (qc v1.06).
* Reduce limit for maximum cells ammo_touch in items.qc qw2.30 GPL (qc v1.06).
* Added secret die think function in doors.qc (qc v1.06).
* Added pain function for old one in oldone.qc (qc v1.06).
* Added CycleWeaponReverseCommand from qw2.30 GPL (qc v1.06).
* Updated W_BestWeapon in weapons.qc from qw2.30 GPL (qc v1.06).
* Updated W_FireLightning in weapons.qc from qw2.30 GPL (qc v1.06).
* Updated W_FireRocket in weapons.qc from scratch (qc v1.06).
* Updated W_FireAxe in weapons.qc from qw2.30 GPL (qc v1.06).
* Removed /raid/quake/ from the model paths (qc v1.06).
* Changed release to a .zip file.

v1.0: Initial release.

* Initial release of the project with GPL code v1.01 take from q1source.zip.
  Compiled with qcc take from q1tools_gpl.tgz (e.g. the official GPL releases
  from id Software).